<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.MainFragment">

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/refresh"
            app:layout_constraintBottom_toBottomOf="@+id/chooseCityButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chooseCityButton" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/choose_city_text"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Moscow" />

        <LinearLayout
            android:id="@+id/currentTemperatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/temperatureImage"
            app:layout_constraintTop_toBottomOf="@+id/cityName">


            <TextView
                android:id="@+id/weatherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="+15" />

            <TextView
                android:id="@+id/temperaturePostfix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/windImage"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/wind_light"
            app:layout_constraintBottom_toBottomOf="@+id/currentWindSpeedText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/currentWindSpeedText" />

        <ImageView
            android:id="@+id/temperatureImage"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/thermometer_light"
            app:layout_constraintBottom_toBottomOf="@+id/currentTemperatureText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/currentTemperatureText" />

        <LinearLayout
            android:id="@+id/currentWindSpeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/currentTemperatureText"
            app:layout_constraintTop_toBottomOf="@+id/currentTemperatureText">

            <TextView
                android:id="@+id/windSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="5.1" />

            <TextView
                android:id="@+id/windSpeedPostfix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/temperatureImage"
            app:layout_constraintTop_toBottomOf="@+id/currentWindSpeedText">

            <TextView
                android:id="@+id/textLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/last_update" />

            <TextView
                android:id="@+id/lastUpdateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data" />

        </LinearLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/cityAnimation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/dailyWeather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastUpdate"
            app:layout_constraintVertical_bias="0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/beautiful_city"
            app:lottie_repeatMode="restart" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/weatherAnimation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/dailyWeather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastUpdate"
            app:layout_constraintVertical_bias="0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/weather_partly_cloudy"
            app:lottie_repeatMode="restart" />

        <LinearLayout
            android:id="@+id/dailyWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/chooseCityButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/morningData"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/morningWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="+10" />

                <ImageView
                    android:id="@+id/morningImage"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:id="@+id/morningText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayData"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="+15" />

                <ImageView
                    android:id="@+id/dayImage"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/sun"/>

                <TextView
                    android:id="@+id/dayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/eveningData"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eveningWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="+15" />

                <ImageView
                    android:id="@+id/eveningImage"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/sunset"/>

                <TextView
                    android:id="@+id/eveningText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nightData"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nightWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="+15" />

                <ImageView
                    android:id="@+id/nightImage"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/moon"/>

                <TextView
                    android:id="@+id/nightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/chooseCityButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/choose_city"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
